# deelge

./: LICENSE  pyproject.toml
deelgeorgia/: main.py  tools.py
